:construction: Updating the function
Updating the function

--- a/index.html
+++ b/index.html
@@ -17,18 +17,19 @@
         <section id="contents">
             <article class="list">
                 <h2>할일 목록</h2>
-
-                <li class="todo">
-                    <div class="checkbox">V</div>
-                    <div class="todo_value">목록 임시</div>
-                    <button class="del_btn">삭제</button>
-                </li>
-
-                <li class="todo">
-                    <div class="checkbox">V</div>
-                    <div class="todo_value">목록 임시</div>
-                    <button class="del_btn">삭제</button>
-                </li>
+                <ul>
+                    <!-- <li class="todo">
+                        <div class="checkbox">V</div>
+                        <div class="todo_value">할일을 적어보세요</div>
+                        <button class="del_btn">삭제</button>
+                    </li> -->
+    
+                    <!-- <li class="todo">
+                        <div class="checkbox">V</div>
+                        <div class="todo_value">목록 임시</div>
+                        <button class="del_btn">삭제</button>
+                    </li> -->
+                </ul>
                     
             </article>
 
